Manifests/SmartETL/k8s-nifi-cluster/deployment/nifi/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nifi
  labels:
    app: nifi
  annotations:
    app.kubernetes.io/name: nifi
    app.kubernetes.io/part-of: nifi
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 600
  selector:
    app: nifi
  ports:
    - protocol: TCP
      port: 6342
      targetPort: 6342
      name: cluster-lb
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
    - protocol: TCP
      port: 8443
      targetPort: 8443
      name: https
    - protocol: TCP
      port: 11443
      targetPort: 11443
      name: cluster
