Manifests/SmartETL/k8s-nifi-cluster/deployment/nifi/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nifi
  labels:
    app: nifi
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-path: "/"
spec:
  tls:
    - hosts:
        - your_domain
      secretName: your_domain-tls
  rules:
    - host: your_domain
      http:
        paths:
          - path: /nifi
            pathType: Prefix
            backend:
              service:
                name: nifi
                port:
                  number: 8443
  ingressClassName: nginx
